DevOps/Kubernetes/13.yaml
apiVersion: v1
kind: Pod
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec:
  containers:
    - name: test-container
      image: ubuntu
      env:
        - name: MY_POD_ID  
          valueFrom:
            fieldRef:
              fieldPath: metadata.name   
        - name: MY_POD_SERVICE_ACCOUNT
          valueFrom:
            fieldRef:
              fieldPath: spec.serviceAccountName
  restartPolicy: Never
