DevOps/Kubernetes/example_manifest2.yaml
# kind: Pod                              
# apiVersion: v1                     
# metadata:                           
#   name: testpod3                 
# spec:                                    
#   containers:                      
#     - name: c00                     
#       image: httpd
#       # imagePullPolicy: Never              
#       # command:  ["/bin/bash", "-c", "/etc/init.d/apache2 start" , "/etc/init.d/apache2 status"]
#       # command:  ["/bin/bash", "-c", "which apache2"]

#       env:
#         - name: envvar
#           value: valuevar
#       ports:
#         - containerPort: 80  
#   restartPolicy: Never         # Defaults to Always
  

# kind: Pod
# apiVersion: v1
# metadata:
#   name: testpod4
#   labels:
#     app: app1
#     test: test
# spec:
#   containers:
#     - name: c00
#       image: httpd
#       ports:
#        - containerPort: 80  



# kind: ReplicationController               
# apiVersion: v1
# metadata:
#   name: myreplica
# spec:
#   replicas: 2            
#   selector:        
#     myname: app1     # should be same as template -> metadata -> labels -> app                      
#   template:                
#     metadata:
#       name: testpod6
#       labels:            
#         myname: app1
#     spec:
#      containers:
#        - name: c00
#          image: httpd


apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment-nautilus
  labels:
    app: httpd_app_nautilus
spec:
  replicas: 4
  selector:
    matchLabels:
      app: httpd_app_nautilus
  template:
    metadata:
      labels:
        app: httpd_app_nautilus
    spec:
      containers:
        - name: ubuntu-image
          image: ubuntu
          ports:
            - containerPort: 80
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: httpd-deployment-nautilus
#   labels:
#     app: httpd_app_nautilus
# spec:
#   replicas: 4
#   selector:
#     matchLabels:
#       app: httpd_app_nautilus
#   template:
#     metadata:
#       labels:
#         app: httpd_app_nautilus
#     spec:
#       containers:
#         - name: httpd-container-nautilus
#           image: httpd:latest
#           ports:
#             - containerPort: 80

# kind: ReplicaSet                                    
# apiVersion: apps/v1                            
# metadata:
#   name: myrs
# spec:
#   replicas: 2  
#   selector:                  
#     matchExpressions:                             # these must match the labels
#       - {key: myname, operator: In, values: [Bhupinder, Bupinder, Bhopendra]}
#       - {key: env, operator: NotIn, values: [production]}
#   template:      
#     metadata:
#       name: testpod7
#       labels:              
#         myname: Bhupinder
#     spec:
#      containers:
#        - name: c00
#          image: ubuntu
#          command: ["/bin/bash", "-c", "while true; do echo Technical-Guftgu; sleep 5 ; done"]
